<resources>
    <string name="app_name">ZRahman_Remote_Control</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_tv">My TV</string>
    <string name="tv_power">TV Power: </string>
    <string name="tv_power_status">On</string>
    <string name="speaker_volume">Speaker Volume: </string>
    <string name="speaker_volume_number">50</string>
    <string name="current_channel">Current Channel: </string>
    <string name="current_channel_number">87</string>
    <string name="my_remote_control">My Remote Control</string>
    <string name="power">Power</string>
    <string name="lbl_volume">Volume</string>
    <string name="lbl_channel">Channel</string>
    <string name="lbl_fav_channel">Favorite\nChannel</string>
</resources>
