<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_layout_background_color"
            android:padding="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/lbl_my_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/top_layout_text"
                android:layout_gravity="center"
                android:text="@string/my_tv"
                android:textStyle="bold"
                android:padding="10dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:text="@string/tv_power"
                        android:textSize="18sp"
                        android:textColor="@color/top_layout_text" />

                    <Space
                        android:layout_width="25dp"/>

                    <TextView
                        android:id="@+id/tv_power_status_indicator"
                        android:text="@string/tv_power_status"
                        android:textSize="18sp"
                        android:textColor="@color/top_layout_text"
                        android:gravity="left"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:text="@string/speaker_volume"
                        android:textSize="18sp"
                        android:textColor="@color/top_layout_text" />

                    <Space
                        android:layout_width="25dp"/>

                    <TextView
                        android:id="@+id/volume_control_indicator"
                        android:text="@string/speaker_volume_number"
                        android:textSize="18sp"
                        android:textColor="@color/top_layout_text"
                        android:gravity="left"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:text="@string/current_channel"
                        android:textSize="18sp"
                        android:textColor="@color/top_layout_text" />

                    <Space
                        android:layout_width="25dp"/>

                    <TextView
                        android:id="@+id/current_channel_indicator"
                        android:text="@string/current_channel_number"
                        android:textSize="18sp"
                        android:gravity="left"
                        android:textColor="@color/top_layout_text" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_remote_control"
                android:textSize="26sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/my_remote_control"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:layout_span="2"/>

                <Switch
                    android:id="@+id/swch_tv_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_volume"
                    android:layout_column="0"/>

                <SeekBar
                    android:id="@+id/sk_br_volume_control"
                    android:layout_gravity="center_vertical"
                    android:layout_column="1"
                    android:max="100"
                    android:progress="1"
                    android:layout_span="3"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/lbl_channel"
                    android:paddingRight="5dp"
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_zero"
                    android:text="0"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_one"
                    android:text="1"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_two"
                    android:text="2"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow>

                <Space
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_three"
                    android:text="3"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_four"
                    android:text="4"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_five"
                    android:text="5"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow>

                <Space
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_six"
                    android:text="6"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_seven"
                    android:text="7"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_eight"
                    android:text="8"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow>

                <Space
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_nine"
                    android:text="9"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_channel_plus"
                    android:text="CH+"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_channel_minus"
                    android:text="CH-"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/lbl_fav_channel"
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_abc"
                    android:text="ABC"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_nbc"
                    android:text="NBC"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_cbs"
                    android:text="CBS"
                    android:layout_weight="1"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
